--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 	<script src="constants.js"></script>
 	<script src="linalg.js"></script>
+	<script src="sigraph.js"></script>
 	<script src="loader.js"></script>
 	<script src="debug.js"></script>
-	<script src="session.js"></script>
 	<script src="shadow.js"></script>
 	<script src="player.js"></script>
 	<script src="game.js"></script>
