--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<title>Test Game</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+	
+	<script src="meshlib/celltuple.js"></script>
+
 	<script src="constants.js"></script>
 	<script src="linalg.js"></script>
-	<script src="celltuple.js"></script>
 	<script src="loader.js"></script>
 	<script src="debug.js"></script>
 	<script src="shadow.js"></script>
