In the process of rewriting the client

--- a/www/index.html
+++ b/www/index.html
@@ -3,15 +3,14 @@
 <head>
 	<title>Test Game</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-	
-	<script src="meshlib/celltuple.js"></script>
 
-	<script src="constants.js"></script>
-	<script src="linalg.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  
+  <script src="common/game_constants.js"></script>
+	<script src="common/sylvester.js"></script>
+	
 	<script src="loader.js"></script>
-	<script src="debug.js"></script>
-	<script src="shadow.js"></script>
-	<script src="player.js"></script>
+	<script src="input.js"></script>
 	<script src="game.js"></script>
 	<script src="app.js"></script>	
 </head>
