--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>Test Game</title>
+	<title>WebGL Game</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 
   <script src="/socket.io/socket.io.js"></script>
