made a beautiful default webgl error page

--- a/www/index.html
+++ b/www/index.html
@@ -36,13 +36,16 @@ Reason: <div id="errorReason"></div> </tt> </h1>
 <div id="videoItem"></div>
 <h2>To fix this problem, update your browser and video drivers to the latest version:</h2>
 </div>
-<div style="position:relative; left:200;">
+<div>
+<div style="float:left;position:absolute;left:25%;">
 <h3>Browsers that support WebGL:</h3>
 <ul>
 <li><a href=http://www.opera.com/>Opera</a> (Recommended)</li>
 <li><a href=http://www.google.com/chrome>Google Chrome</a></li>
 <li><a href=http://www.mozilla.org/firefox/>Mozilla Firefox</a></li>
 </ul>
+</div>
+<div style="float:left;position:absolute;right:25%">
 <h3>Information on how to update your drivers:</h3>
 <ul>
 <li> <a href="http://www.google.com/support/chrome/bin/answer.py?answer=1202946">Walk through for Windows 7 and Mac OS</a> </li>
@@ -50,6 +53,7 @@ Reason: <div id="errorReason"></div> </tt> </h1>
 <li> <a href="http://ati.amd.com/support/driver.html">ATi/AMD drivers</a> </li>
 <li> <a href="http://support.intel.com/support/graphics/">Intel drivers</a> </li>
 </ul>
+</div>
 </div>
 </div>
 
