--- a/www/index.html
+++ b/www/index.html
@@ -4,23 +4,30 @@
 	<title>WebGL Game</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 
-  <script src="/socket.io/socket.io.js"></script>
-  
-  <script src="common/game_constants.js"></script>
-	<script src="common/sylvester.js"></script>
-	
+  <script src="/dnode.js"></script>
+
 	<script src="loader.js"></script>
 	<script src="input.js"></script>
+	<script src="render.js"></script>
+	<script src="network.js"></script>
 	<script src="game.js"></script>
 	<script src="app.js"></script>	
+	<script src="states/error_state.js"></script>
+	<script src="states/load_state.js"></script>
+	<script src="states/login_state.js"></script>
+	<script src="states/nogl_state.js"></script>
+
 </head>
 
-<body id="docBody" onload="App.init();" onunload="App.shutdown();">
+<body id="docBody">
+
+<div id="loginPane" style="display:none;" align=center>
+</div>
 
 <div id="progressPane" style="display:none;" align=center></div>
 
 <div id="gamePane" style="display:none;">
-<canvas id="gameCanvas" style="position:absolute; top:0px; left:0px;"></canvas>
+<canvas id="renderCanvas" style="position:absolute; top:0px; left:0px;"></canvas>
 </div>
 
 <div id="errorPane" style="display:none; background-color:red; color:black;">
@@ -40,8 +47,8 @@ Reason: <div id="errorReason"></div> </tt> </h1>
 <div style="float:left;position:absolute;left:25%;">
 <h3>Browsers that support WebGL:</h3>
 <ul>
-<li><a href=http://www.opera.com/>Opera</a> (Recommended)</li>
-<li><a href=http://www.google.com/chrome>Google Chrome</a></li>
+<li><a href=http://www.google.com/chrome>Google Chrome (Recommended)</a></li>
+<li><a href=http://www.opera.com/>Opera</a></li>
 <li><a href=http://www.mozilla.org/firefox/>Mozilla Firefox</a></li>
 </ul>
 </div>
