--- a/www/index.html
+++ b/www/index.html
@@ -27,41 +27,45 @@
 <div id="progressPane" style="display:none;" align=center></div>
 
 <div id="gamePane" style="display:none;">
-<canvas id="renderCanvas" style="position:absolute; top:0px; left:0px;"></canvas>
+  <canvas id="renderCanvas" style="position:absolute; top:0px; left:0px;"></canvas>
 </div>
 
 <div id="errorPane" style="display:none; background-color:red; color:black;">
-<h1> <tt> The application has crashed! <br/>
-Reason: <div id="errorReason"></div> </tt> </h1>
+  <h1>
+    <tt> 
+      The application has crashed! 
+      <br/> Reason: <div id="errorReason"></div> 
+    </tt>
+  </h1>
 </div>
 
 <div id="noGLPane" style="display:none;">
-<div align=center>
-<h1>Sorry :(</h1>
-<h1>Your browser does not support WebGL</h1>
-<h2>Here is a quick video of what you are missing:</h2>
-<div id="videoItem"></div>
-<h2>To fix this problem, update your browser and video drivers to the latest version:</h2>
-</div>
-<div>
-<div style="float:left;position:absolute;left:25%;">
-<h3>Browsers that support WebGL:</h3>
-<ul>
-<li><a href=http://www.google.com/chrome>Google Chrome (Recommended)</a></li>
-<li><a href=http://www.opera.com/>Opera</a></li>
-<li><a href=http://www.mozilla.org/firefox/>Mozilla Firefox</a></li>
-</ul>
-</div>
-<div style="float:left;position:absolute;right:25%">
-<h3>Information on how to update your drivers:</h3>
-<ul>
-<li> <a href="http://www.google.com/support/chrome/bin/answer.py?answer=1202946">Walk through for Windows 7 and Mac OS</a> </li>
-<li> <a href="http://support.intel.com/support/graphics/">Intel drivers</a> </li>
-<li> <a href="http://www.nvidia.com/content/drivers/drivers.asp">NVidia drivers</a> </li>
-<li> <a href="http://ati.amd.com/support/driver.html">ATi/AMD drivers</a> </li>
-</ul>
-</div>
-</div>
+  <div align=center>
+    <h1>Sorry :(</h1>
+    <h1>Your browser does not support WebGL</h1>
+    <h2>Here is a quick video of what you are missing:</h2>
+    <div id="videoItem"></div>
+    <h2>To fix this problem, update your browser and video drivers to the latest version:</h2>
+  </div>
+  <div>
+    <div style="float:left;position:absolute;left:25%;">
+      <h3>Browsers that support WebGL:</h3>
+      <ul>
+        <li><a href=http://www.google.com/chrome>Google Chrome (Recommended)</a></li>
+        <li><a href=http://www.opera.com/>Opera</a></li>
+        <li><a href=http://www.mozilla.org/firefox/>Mozilla Firefox</a></li>
+      </ul>
+    </div>
+    <div style="float:left;position:absolute;right:25%">
+      <h3>Information on how to update your drivers:</h3>
+      <ul>
+        <li> <a href="http://www.google.com/support/chrome/bin/answer.py?answer=1202946">Walk through for Windows 7 and Mac OS</a> </li>
+        <li> <a href="http://support.intel.com/support/graphics/">Intel drivers</a> </li>
+        <li> <a href="http://www.nvidia.com/content/drivers/drivers.asp">NVidia drivers</a> </li>
+        <li> <a href="http://ati.amd.com/support/driver.html">ATi/AMD drivers</a> </li>
+      </ul>
+    </div>
+  </div>
 </div>
 
 </body>
