Fixed the damn margins on the no webgl page

--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@
     <h2>To fix this problem, update your browser and video drivers to the latest version:</h2>
   </div>
   <div>
-    <div style="float:left;position:absolute;left:50%;margin-left:5%;">
+    <div style="float:left;position:absolute;right:50%;margin-right:25px;">
       <h3>Browsers that support WebGL:</h3>
       <ul>
         <li><a href=http://www.google.com/chrome>Google Chrome (Recommended)</a></li>
@@ -66,7 +66,7 @@
         <li><a href=http://www.mozilla.org/firefox/>Mozilla Firefox</a></li>
       </ul>
     </div>
-    <div style="float:left;position:absolute;right:25%">
+    <div style="float:left;position:absolute;left:50%;margin-left:25px;">
       <h3>Information on how to update your drivers:</h3>
       <ul>
         <li> <a href="http://www.google.com/support/chrome/bin/answer.py?answer=1202946">Walk through for Windows 7 and Mac OS</a> </li>
