reorganizing a bit more.  want to place components in a separate directory to avoid name conflicts.

--- a/www/index.html
+++ b/www/index.html
@@ -61,7 +61,7 @@
     <div style="float:left;position:absolute;right:50%;margin-right:25px;">
       <h3>Browsers that support WebGL:</h3>
       <ul>
-        <li><a href=http://www.google.com/chrome>Google Chrome 14/15 (Recommended)</a></li>
+        <li><a href=http://www.google.com/chrome>Google Chrome 12+ (Recommended)</a></li>
         <li><a href=http://www.mozilla.org/firefox/>Mozilla Firefox 4+</a></li>
         <li><a href=http://www.opera.com/>Opera 11+</a></li>
         <li><a href=http://www.apple.com/safari/>Apple Safari (for OSX 10.6 and above)</a></li>
