--- a/www/index.html
+++ b/www/index.html
@@ -6,11 +6,14 @@
 
   <script src="compat.js"></script>
   <script src="/dnode.js"></script>
+  <script src="events.js"></script>
+  <script src="/patcher.js"></script>
 
 	<script src="loader.js"></script>
 	<script src="input.js"></script>
 	<script src="render.js"></script>
 	<script src="network.js"></script>
+	<script src="client.js"></script>
 	<script src="game.js"></script>
 	<script src="app.js"></script>	
 	<script src="states/error_state.js"></script>
