Building basic infrastructure for components

--- a/www/index.html
+++ b/www/index.html
@@ -80,6 +80,15 @@
       </ul>
     </div>
   </div>
+  <div align=center>
+    Tips for Linux users:
+    <ul>
+      <li>Chrome and Firefox 4.0 are the only two Linux browsers that support WebGL</li>
+      <li>Run Chrome with the flag <tt>--ignore-gpu-blacklist</tt></li>
+      <li>For Firefox 4.0, try the <a href='http://www.silicongadget.com/guides/internet-guides/activate-webgl-support-on-firefox-4/2126/'>following tutorial</a></li>
+      <li>Make sure to update your video drivers!</li>
+    </ul>
+  </div>
 </div>
 
 </body>
