Basic entity component system implemented

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
 	<script src="loader.js"></script>
 	<script src="input.js"></script>
 	<script src="render.js"></script>
+  <script src="/components.js"></script>
 	<script src="network.js"></script>
 	<script src="client.js"></script>
 	<script src="game.js"></script>
