eventified the page loading code

--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,9 @@
   </div>
 </div>
 
-<div id="progressPane" style="display:none;" align=center></div>
+<div id="progressPane" style="display:none;" align=center>
+Loading...
+</div>
 
 <div id="gamePane" style="display:none;">
   <canvas id="renderCanvas" style="position:absolute; top:0px; left:0px;"></canvas>
