Aaaah!  Can't get the damn thing to draw a single triangle.  Am going crazy...

--- a/www/index.html
+++ b/www/index.html
@@ -82,15 +82,15 @@ Loading...
         <li> <a href="http://ati.amd.com/support/driver.html">ATi/AMD drivers</a> </li>
       </ul>
     </div>
-  </div>
-  <div align=center>
-    Tips for Linux users:
-    <ul>
-      <li>Chrome and Firefox 4.0 are the only two Linux browsers that support WebGL</li>
-      <li>Run Chrome with the flag <tt>--ignore-gpu-blacklist</tt></li>
-      <li>For Firefox 4.0, try the <a href='http://www.silicongadget.com/guides/internet-guides/activate-webgl-support-on-firefox-4/2126/'>following tutorial</a></li>
-      <li>Make sure to update your video drivers!</li>
-    </ul>
+    <div style="position:relative;top:200px;left:50%;margin-left:-300px;">
+      <h3>Tips for Linux users:</h3>
+      <ul>
+        <li>Chrome and Firefox 4.0 are the only two Linux browsers that support WebGL</li>
+        <li>Run Chrome with the flag <tt>--ignore-gpu-blacklist</tt></li>
+        <li>For Firefox 4.0, try the <a href='http://www.silicongadget.com/guides/internet-guides/activate-webgl-support-on-firefox-4/2126/'>following tutorial</a></li>
+        <li>Make sure to update your video drivers and browser!</li>
+      </ul>
+    </div>
   </div>
 </div>
 
