Happy with basic sprite drawing code for now

--- a/www/index.html
+++ b/www/index.html
@@ -4,23 +4,24 @@
 	<title>WebGL Game</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 
-  <script src="compat.js"></script>
+  <script src="/compat.js"></script>
   <script src="/dnode.js"></script>
-  <script src="events.js"></script>
+  <script src="/events.js"></script>
   <script src="/patcher.js"></script>
+  <script src="/linalg.js"></script>
 
-	<script src="loader.js"></script>
-	<script src="input.js"></script>
-	<script src="render.js"></script>
+	<script src="/loader.js"></script>
+	<script src="/input.js"></script>
+	<script src="/render.js"></script>
   <script src="/components.js"></script>
-	<script src="network.js"></script>
-	<script src="client.js"></script>
-	<script src="game.js"></script>
-	<script src="app.js"></script>	
-	<script src="states/error_state.js"></script>
-	<script src="states/load_state.js"></script>
-	<script src="states/login_state.js"></script>
-	<script src="states/nogl_state.js"></script>
+	<script src="/network.js"></script>
+	<script src="/client.js"></script>
+	<script src="/game.js"></script>
+	<script src="/app.js"></script>	
+	<script src="/states/error_state.js"></script>
+	<script src="/states/load_state.js"></script>
+	<script src="/states/login_state.js"></script>
+	<script src="/states/nogl_state.js"></script>
 	
 	<link rel=StyleSheet href="style.css" type="text/css">
 
