Working on client side mesh generation

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
   <script src="/events.js"></script>
   <script src="/patcher.js"></script>
   <script src="/linalg.js"></script>
+  <script src="/voxels.js"></script>
 
 	<script src="/loader.js"></script>
 	<script src="/input.js"></script>
