Pros:  New voxel method is pretty fast.  Cons:  It is broken right now

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
 	<script src="/loader.js"></script>
 	<script src="/input.js"></script>
 	<script src="/render.js"></script>
+	<script src="/voxel_client.js"></script>
   <script src="/components.js"></script>
 	<script src="/network.js"></script>
 	<script src="/client.js"></script>
@@ -23,6 +24,7 @@
 	<script src="/states/load_state.js"></script>
 	<script src="/states/login_state.js"></script>
 	<script src="/states/nogl_state.js"></script>
+	<script src="/states/game_state.js"></script>
 	
 	<link rel=StyleSheet href="style.css" type="text/css">
 
