Restructured game directory format

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 	<script src="/input.js"></script>
 	<script src="/render.js"></script>
 	<script src="/voxel_client.js"></script>
-  <script src="/components.js"></script>
+  <script src="/game_client.js"></script>
 	<script src="/network.js"></script>
 	<script src="/client.js"></script>
 	<script src="/game.js"></script>
