Slowly reconnecting all the old pieces

--- a/game/www/client.html
+++ b/game/www/client.html
@@ -45,7 +45,8 @@
 
 
 <div id="progressPane" style="display:none;" align=center>
-Loading...
+  <div class="loginBubble" id="progressBar">
+  </div>
 </div>
 
 <div id="gamePane" style="display:none;">
