Ok!  Client now actually connects and draws stuff, though now seems to be missing the disconnect exception

--- a/game/www/client.html
+++ b/game/www/client.html
@@ -6,7 +6,7 @@
 
   <script src="/browserify.js"></script>
   <script>
-  require('./engine.js').createEngine(require('./client.js'), '$SESSION_TOKEN'); 
+  var ENGINE = require('./engine.js').createEngine(require('./client.js'), '$SESSION_TOKEN'); 
   </script>
   
 	<link rel=StyleSheet href="style.css" type="text/css">
