--- a/game/www/client.html
+++ b/game/www/client.html
@@ -51,6 +51,10 @@
 
 <div id="gamePane" style="display:none;">
   <canvas id="renderCanvas" style="position:absolute; top:0px; left:0px;"></canvas>
+  <div id="uiPane" style="position:absolute; bottom:0px; left:0px;">
+    <div id="uiChatLog" align="left" style="overflow:auto;height:200px;width:500px;background-color:rgba(255,255,255,0.5);"> </div> <br/>
+    <input id="uiChatBox" type="text" value="" size="128" style="display:none; width:500px; "/>
+  </div>
 </div>
 
 <div id="errorPane" style="display:none; background-color:red; color:black;">
