Accidentally rolled out crappy login provider changes

--- a/game/www/index.html
+++ b/game/www/index.html
@@ -4,6 +4,12 @@
 </head>
 
 <body>
-This is the login page
+Select a login: <br>
+
+<a href="/authenticate?provider=google">Google</a><br>
+<a href="/authenticate?provider=facebook">Facebook</a><br>
+<a href="/authenticate?provider=twitter">Twitter</a><br>
+<a href="/authenticate?provider=temp">Guest (no saving)</a><br>
+
 </body>
 </html>
