Phasing out dnode, to fix XMLHttpPolling disconnect bugs :(

--- a/game/www/client.html
+++ b/game/www/client.html
@@ -4,6 +4,7 @@
 	<title>WebGL Game</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 
+  <script src="/socket.io/socket.io.js"></script>
   <script src="/browserify.js"></script>
   <script>
   var ENGINE = require('./engine.js').createEngine(require('./client.js'), '$SESSION_TOKEN'); 
