--- a/game/www/client.html
+++ b/game/www/client.html
@@ -4,6 +4,13 @@
 	<title>WebGL Game</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 
+  <script>
+    if(window.MozWebSocket) {
+      window.WebSocket = window.MozWebSocket;
+      document.WebSocket = window.MozWebSocket;
+      this.WebSocket = window.MozWebSocket;
+    }
+  </script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/browserify.js"></script>
   <script>
